// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PortfolioMetricCard Should render card with title and children 1`] = `
<DocumentFragment>
  .c0 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c1 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

@media (min-width:1600px) {
  .c0 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c1 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c1 > svg {
    width: 1rem;
    height: 1rem;
  }
}

<div
    class="mb-1 col"
    data-testid="Portfolio-Metric-Card"
  >
    <div
      class="c0"
    >
      <div
        class="c1 d-flex align-items-center"
      >
        Risk comparison
      </div>
      <h1>
        mock content
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioMetricCard Should render card with title, children, and tooltip 1`] = `
<DocumentFragment>
  .c2 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c0 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c1 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

@media (min-width:1600px) {
  .c2 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c0 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c1 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c1 > svg {
    width: 1rem;
    height: 1rem;
  }
}

<div
    class="mb-1 col"
    data-testid="Portfolio-Metric-Card"
  >
    <div
      class="c0"
    >
      <div
        class="c1 d-flex align-items-center"
      >
        Risk comparison
        <i
          class="c2"
        >
          <svg>
            info.svg
          </svg>
        </i>
      </div>
      <h1>
        mock content
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioMetricCard Should render with single value 1`] = `
<DocumentFragment>
  .c2 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c0 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c1 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c3 {
  line-height: normal;
  font-size: 1.5rem;
}

.c3 sup {
  font-size: 1rem;
  padding: 0.25rem;
}

.c3 span {
  color: var(--subtext-3);
  font-size: 12px;
  line-height: 15px;
}

.c3 .allocation-separator {
  height: 23px;
  width: 2px;
  background: var(--border-new);
}

@media (min-width:1600px) {
  .c2 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c0 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c1 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c1 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c3 {
    font-size: 1.95rem;
  }
}

@media (min-width:1600px) {
  .c3 sup {
    font-size: 1.15rem;
  }
}

<div
    class="mb-1 col-6"
    data-testid="Portfolio-Metric-Card"
  >
    <div
      class="c0"
    >
      <div
        class="c1 d-flex align-items-center"
      >
        Yield
        <i
          class="c2"
        >
          <svg>
            info.svg
          </svg>
        </i>
      </div>
      <div
        class="c3"
      >
        5.00
        <sup>
          %
        </sup>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioMetricCard Should render with two values and text button to switch 1`] = `
<DocumentFragment>
  .c2 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c0 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c1 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c4 {
  line-height: normal;
  font-size: 1.5rem;
}

.c4 sup {
  font-size: 1rem;
  padding: 0.25rem;
}

.c4 span {
  color: var(--subtext-3);
  font-size: 12px;
  line-height: 15px;
}

.c4 .allocation-separator {
  height: 23px;
  width: 2px;
  background: var(--border-new);
}

.c3 {
  margin-left: auto;
  color: var(--lightest);
  font-size: 0.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  background: none;
  border: none;
}

@media (min-width:1600px) {
  .c2 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c0 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c1 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c1 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c4 {
    font-size: 1.95rem;
  }
}

@media (min-width:1600px) {
  .c4 sup {
    font-size: 1.15rem;
  }
}

<div
    class="mb-1 col-6"
    data-testid="Portfolio-Metric-Card"
  >
    <div
      class="c0"
    >
      <div
        class="c1 d-flex align-items-center"
      >
        Income
        <i
          class="c2"
        >
          <svg>
            info.svg
          </svg>
        </i>
        <button
          class="c3"
          type="button"
        >
          Annual
        </button>
      </div>
      <div
        class="c4"
      >
        $525
        <sup>
          .00
        </sup>
        <span>
          /monthly
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PortfolioMetricCard Should render with two values and text button to switch 2`] = `
<DocumentFragment>
  .c2 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c0 {
  width: 100%;
  height: 100%;
  background: var(--dark);
  border: 1px solid var(--border-new);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  border-radius: 0.5rem;
  padding: 1rem 1.15rem;
  min-height: 6rem;
}

.c0 > * {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  font-weight: bold;
  line-height: normal;
  -webkit-letter-spacing: 0.2em;
  -moz-letter-spacing: 0.2em;
  -ms-letter-spacing: 0.2em;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--lightest);
  position: relative;
  font-size: 0.65rem;
  padding: 0.25rem 0;
  margin-bottom: 0.25rem;
  max-height: 2rem;
}

.c1 > svg {
  margin: -0.5rem 0 0 0.35rem;
  vertical-align: middle;
  width: 0.85rem;
  height: 0.85rem;
}

.c4 {
  line-height: normal;
  font-size: 1.5rem;
}

.c4 sup {
  font-size: 1rem;
  padding: 0.25rem;
}

.c4 span {
  color: var(--subtext-3);
  font-size: 12px;
  line-height: 15px;
}

.c4 .allocation-separator {
  height: 23px;
  width: 2px;
  background: var(--border-new);
}

.c3 {
  margin-left: auto;
  color: var(--lightest);
  font-size: 0.8rem;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  padding: 0;
  background: none;
  border: none;
}

@media (min-width:1600px) {
  .c2 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c0 {
    border-radius: 0.625rem;
    padding: 1rem 1.65rem 1.65rem 1.65rem;
  }
}

@media (min-width:1600px) {
  .c1 {
    font-size: 0.75rem;
    margin-bottom: 0.5rem;
  }
}

@media (min-width:1600px) {
  .c1 > svg {
    width: 1rem;
    height: 1rem;
  }
}

@media (min-width:1600px) {
  .c4 {
    font-size: 1.95rem;
  }
}

@media (min-width:1600px) {
  .c4 sup {
    font-size: 1.15rem;
  }
}

<div
    class="mb-1 col-6"
    data-testid="Portfolio-Metric-Card"
  >
    <div
      class="c0"
    >
      <div
        class="c1 d-flex align-items-center"
      >
        Income
        <i
          class="c2"
        >
          <svg>
            info.svg
          </svg>
        </i>
        <button
          class="c3"
          type="button"
        >
          Monthly
        </button>
      </div>
      <div
        class="c4"
      >
        $6,300
        <sup>
          .00
        </sup>
        <span>
          /yearly
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
